grammar.js
		source_file: ($) => choice($.expressions, $.where_clause),

		// Tokens
		semi_colon: (_) => token(';'),
		keyword_show: (_) => make_keyword('SHOW'),
		keyword_if: (_) => make_keyword('IF'),
		keyword_throw: (_) => make_keyword('THROW'),
		keyword_exists: (_) => make_keyword('EXISTS'),
		keyword_overwrite: (_) => make_keyword('OVERWRITE'),
		keyword_on: (_) => make_keyword('ON'),
		keyword_let: (_) => make_keyword('LET'),
		keyword_return: (_) => make_keyword('RETURN'),
		keyword_end: (_) => make_keyword('END'),
		keyword_timeout: (_) => make_keyword('TIMEOUT'),
		keyword_where: (_) => make_keyword('WHERE'),
		keyword_true: (_) => make_keyword('TRUE'),
		keyword_none: (_) => make_keyword('NONE'),
		keyword_and: (_) => make_keyword('AND'),
		keyword_not: (_) => make_keyword('NOT'),
		keyword_define: (_) => make_keyword('DEFINE'),
		keyword_field: (_) => make_keyword('FIELD'),
		keyword_function: (_) => make_keyword('FUNCTION'),
		keyword_root: (_) => make_keyword('ROOT'),
		keyword_user: (_) => make_keyword('USER'),
		keyword_remove: (_) => make_keyword('REMOVE'),
		keyword_create: (_) => make_keyword('CREATE'),
		keyword_delete: (_) => make_keyword('DELETE'),
		keyword_then: (_) => make_keyword('THEN'),
		keyword_type: (_) => make_keyword('TYPE'),
		keyword_default: (_) => make_keyword('DEFAULT'),
		keyword_assert: (_) => make_keyword('ASSERT'),
		keyword_cascade: (_) => make_keyword('CASCADE'),
		keyword_for: (_) => make_keyword('FOR'),
		keyword_database: (_) => make_keyword('DATABASE'),
		keyword_set: (_) => make_keyword('SET'),
		keyword_record: (_) => make_keyword('RECORD'),
		keyword_grant: (_) => make_keyword('GRANT'),
		keyword_access: (_) => make_keyword('ACCESS'),

		keyword_reference: (_) => make_keyword('REFERENCE'),
		expressions: ($) =>
			seq(
				$.expression,
				repeat(seq($.semi_colon, $.expression)),
				optional($.semi_colon),
			),

		expression: ($) =>
			choice($.primary_statement, $.subquery_statement, $.value),

		// Statements

		// Top level statements
		primary_statement: ($) =>
			choice(
				$.live_select_statement,
				$.begin_statement,
				$.cancel_statement,
				$.commit_statement,
				$.use_statement,
				$.info_statement,
				$.throw_statement,
				$.break_statement,
				$.continue_statement,
				$.sleep_statement,
				$.kill_statement,
			),

		// Statements that can be stand alone or nested
		subquery_statement: ($) =>
			choice(
				$.select_statement,
				$.if_statement,
				$.let_statement,
				$.alter_statement,
				$.delete_statement,
				$.create_statement,
				$.update_statement,
				$.upsert_statement,
				$.remove_statement,
				$.return_statement,
				$.insert_statement,
				$.relate_statement,
				$.for_statement,
				$.show_statement,
				$.define_analyzer_statement,
				$.define_database_statement,
				$.define_event_statement,
				$.define_field_statement,
				$.define_function_statement,
				$.define_index_statement,
				$.define_namespace_statement,
				$.define_param_statement,
				$.define_scope_statement,
				$.define_access_statement,
				$.define_api_statement,
				$.define_module_statement,
				$.define_bucket_statement,
				$.define_table_statement,
				$.define_token_statement,
				$.define_user_statement,
				$.rebuild_index_statement,
			),

		return_statement: ($) => $.return_clause,

		throw_statement: ($) => seq($.keyword_throw, $.value),

		if_statement: ($) =>
			prec.right(choice(
				seq(
					$.keyword_if,
					$.value,
					$.block,
					repeat($.else_if_clause),
					optional($.else_clause),
				),
				seq(
					$.keyword_if,
					$.value,
					$.keyword_then,
					$.if_then_result,
					repeat($.else_if_then_clause),
					optional($.else_then_clause),
					$.keyword_end,
				),
			)),

		if_then_result: ($) =>
			choice($.return_clause, $.throw_statement, $.block, $.value),

		let_statement: ($) =>
			seq(
				$.keyword_let,
				$.variable_name,
				'=',
				choice($.value, $.subquery_statement),
			),

		define_field_statement: ($) =>
			seq(
				$.keyword_define,
				$.keyword_field,
				optional(choice($.if_not_exists_clause, $.keyword_overwrite)),
				commaSeparated($.inclusive_predicate),
				$.on_table_clause,
				repeat(
					choice(
						$.type_clause,
						$.default_clause,
						$.computed_clause,
						$.reference_clause,
						$.readonly_clause,
						$.value_clause,
						$.assert_clause,
						$.permissions_for_clause,
						$.comment_clause,
					),
				),
			),

		remove_statement: ($) =>
			seq(
				$.keyword_remove,
				choice(
					seq($.keyword_api, optional($.if_exists_clause), $.value),
					seq(
						$.keyword_bucket,
						optional($.if_exists_clause),
						$.value,
					),
					seq(
						$.keyword_namespace,
						optional($.if_exists_clause),
						$.identifier,
					),
					seq(
						$.keyword_database,
						optional($.if_exists_clause),
						$.identifier,
					),
					seq(
						$.keyword_user,
						optional($.if_exists_clause),
						$.identifier,
						$.keyword_on,
						choice(
							$.keyword_root,
							$.keyword_namespace,
							$.keyword_database,
						),
					),
					seq(
						$.keyword_token,
						optional($.if_exists_clause),
						$.identifier,
						$.keyword_on,
						choice(
							$.keyword_root,
							$.keyword_namespace,
							$.keyword_scope,
						),
					),
					seq(
						$.keyword_event,
						optional($.if_exists_clause),
						$.identifier,
						optional(seq($.keyword_on, $.keyword_table)),
						$.identifier,
					),
					seq(
						$.keyword_field,
						optional($.if_exists_clause),
						$.identifier,
						optional(seq($.keyword_on, $.keyword_table)),
						$.identifier,
					),
					seq(
						$.keyword_index,
						optional($.if_exists_clause),
						$.identifier,
						optional(seq($.keyword_on, $.keyword_table)),
						$.identifier,
					),
					seq(
						$.keyword_analyzer,
						optional($.if_exists_clause),
						$.identifier,
					),
					seq(
						$.keyword_function,
						optional($.if_exists_clause),
						$.custom_function_name,
					),
					seq(
						$.keyword_param,
						optional($.if_exists_clause),
						$.variable_name,
					),
					seq(
						$.keyword_scope,
						optional($.if_exists_clause),
						$.identifier,
					),
					seq(
						$.keyword_table,
						optional($.if_exists_clause),
						$.identifier,
					),
				),
			),

		create_statement: ($) =>
			seq(
				$.keyword_create,
				optional($.keyword_only),
				$.create_target,
				optional(choice($.content_clause, $.set_clause)),
				optional($.version_clause),
				optional($.return_clause),
				optional($.timeout_clause),
			),

		where_clause: ($) => seq($.keyword_where, $.value),

		timeout_clause: ($) => seq($.keyword_timeout, $.duration),
		on_table_clause: ($) =>
			seq($.keyword_on, optional($.keyword_table), $.identifier),

		type_clause: ($) =>
			seq(optional($.keyword_flexible), $.keyword_type, $.type),

		default_clause: ($) =>
			seq($.keyword_default, optional($.keyword_always), choice($.block, $.value)),

		reference_clause: ($) =>
			seq($.keyword_reference, optional($.reference_on_delete_clause)),
		reference_on_delete_clause: ($) =>
			seq(
				$.keyword_on,
				$.keyword_delete,
				choice(
					$.keyword_ignore,
					$.keyword_unset,
					$.keyword_cascade,
					$.keyword_reject,
					seq($.keyword_then, $.block),
				),
			),

		assert_clause: ($) => seq($.keyword_assert, choice($.block, $.value)),

		block: ($) => seq('{', optional($.expressions), '}'),

		if_not_exists_clause: ($) =>
			seq($.keyword_if, $.keyword_not, $.keyword_exists),
		if_exists_clause: ($) => seq($.keyword_if, $.keyword_exists),

		create_target: ($) => choice(commaSeparated($.value), $.multi_record),

		set_clause: ($) =>
			seq($.keyword_set, commaSeparated($.field_assignment)),

		return_clause: ($) =>
			seq(
				$.keyword_return,
				choice(
					$.keyword_before,
					$.keyword_after,
					$.keyword_diff,
					choice(
						seq(optional($.keyword_value), commaSeparated($.value)),
						commaSeparated($.value),
					),
					$.if_statement,
				),
			),

		field_assignment: ($) =>
			seq($.identifier, $.assignment_operator, $.value),

		// Value-related rules
		value: ($) =>
			choice(
				$.base_value,
				$.cast_expression,
				$.binary_expression,
				$.path,
				$.function_call,
				$.negated_expression,
				$.range,
			),

		function_call: ($) =>
			choice(
				seq($.keyword_count, $.argument_list_count),
				seq(
					choice(
						$.builtin_function_name,
						$.function_name,
						$.custom_function_name,
						$.keyword_rand,
					),
					optional($.version),
					$.argument_list,
				),
			),

		base_value: ($) =>
			choice(
				$.string,
				$.prefixed_string,
				$.number,
				$.keyword_true,
				$.keyword_false,
				$.keyword_none,
				$.keyword_null,
				$.variable_name,
				$.identifier,
				$.array,
				$.record_id,
				$.sub_query,
				$.object,
				$.duration,
				$.point,
			),

		binary_expression: ($) => prec.left(seq($.value, $.operator, $.value)),

		path: ($) =>
			choice(
				seq($.base_value, repeat1($.path_element)),
				seq($.function_call, repeat1($.path_element)),
				seq($.graph_path, repeat($.path_element)),
			),

		path_element: ($) => choice($.graph_path, $.subscript, $.filter),

		predicate: ($) =>
			choice($.value, seq($.value, $.keyword_as, $.identifier)),

		inclusive_predicate: ($) => choice('*', $.predicate),

		subscript: ($) =>
			seq(
				'.',
				choice(
					prec(1, seq($.identifier, $.argument_list)),
					seq($.function_name, $.argument_list),
					$.identifier,
					'*',
				),
			),

		argument_list: ($) => seq('(', optional(commaSeparated($.value)), ')'),

		type_name: (_) => /[a-zA-Z_][a-zA-Z0-9_]*/,

		type: ($) =>
			choice(
				$.union_type,
				$.parameterized_type,
				$.composite_type,
				$.type_name,
				$.type_object,
			),

		parameterized_type: ($) =>
			seq(
				$.type_name,
				'<',
				commaSeparated(choice($.type, $.literal_value)),
				'>',
			),

		string: (_) => /'[^'\\]*(?:\\.[^'\\]*)*'|"[^"\\]*(?:\\.[^"\\]*)*"/,
		number: ($) => choice($.int, $.float, $.decimal),
		int: (_) => /-?[0-9]+/,
		variable_name: (_) => /\$[a-zA-Z_][a-zA-Z0-9_]*/,
		identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_]*/,
		builtin_function_name: (_) =>
			token(
				prec(
					1,
					/(array|crypto|duration|encoding|geo|http|math|meta|not|object|parse|rand|record|search|session|sleep|string|time|type|vector)::[a-zA-Z_][a-zA-Z0-9_]*(::[a-zA-Z_][a-zA-Z0-9_]*)?/,
				),
			),
		array: ($) => seq('[', optional(commaSeparatedTrailing($.value)), ']'),
		object: ($) => seq('{', optional($.object_content), '}'),
		object_content: ($) => commaSeparatedTrailing($.object_property),
		object_property: ($) =>
			seq(choice($.object_key, $.string), ':', $.value),
		object_key: (_) => /[a-zA-Z_][a-zA-Z0-9_]*/,

		record_id: ($) =>
			prec.left(
				seq(
					$.object_key,
					':',
					choice($.record_id_value, $.record_id_range),
				),
			),
		record_id_value: ($) =>
			choice($.record_id_ident, $.int, $.array, $.object),
		record_id_ident: (_) => /[a-zA-Z0-9_]+/,
		duration: ($) => repeat1($.duration_part),
		duration_part: (_) => /[0-9]+\s*(ns|us|µs|ms|s|m|h|d|w|y)/,
		operator: ($) =>
			choice(
				$.binary_operator,
				'-',
				'=',
				'>',
				'<',
				'%',
				$.keyword_and,
				$.keyword_or,
				$.keyword_is,
				seq($.keyword_is, $.keyword_not),
				$.keyword_contains,
				$.keyword_contains_not,
				$.keyword_contains_all,
				$.keyword_contains_any,
				$.keyword_contains_none,
				$.keyword_inside,
				$.keyword_in,
				$.keyword_not_inside,
				seq($.keyword_not, $.keyword_in),
				$.keyword_all_inside,
				$.keyword_any_inside,
				$.keyword_none_inside,
				$.keyword_outside,
				$.keyword_intersects,
				seq('@', $.int, '@'),
				seq('<|', $.int, optional(seq(',', $.distance_values)), '|>'),
			),

		binary_operator: (_) =>
			choice(
				'&&',
				'||',
				'??',
				'?:',
				'!=',
				'==',
				'?=',
				'*=',
				'~',
				'!~',
				'*~',
				'<=',
				'>=',
				'+',
				'+=',
				'-=',
				'*',
				'×',
				'/',
				'÷',
				'**',
				...['∋', '∌', '⊇', '⊃', '⊅', '∈', '∉', '⊆', '⊂', '⊄'],
				'@@',
			),

		assignment_operator: (_) => choice('=', '+=', '-='),
	},
});

function commaSeparated(rule) {
	return seq(rule, repeat(seq(',', rule)));
}

function commaSeparatedTrailing(rule) {
	return seq(rule, repeat(seq(',', rule)), optional(','));
}

function make_keyword(word) {
	return new RegExp(
		[...word].map((c) => `[${c.toLowerCase()}${c.toUpperCase()}]`).join(''),
	);
}
