test/corpus/field_block_clauses.txt
==================
DEFINE FIELD block clauses
==================

DEFINE FIELD OVERWRITE organization ON calendar
	TYPE option<record<organization>>
	REFERENCE ON DELETE CASCADE
	DEFAULT {
		IF type::is_record($this.owner, 'account') THEN NONE END;
		IF type::is_record($this.owner, 'team') THEN $this.owner.organization END;
		IF type::is_record($this.owner, 'organization') THEN $this.owner END;

		NONE
	}
	ASSERT {
		IF $value = NONE AND type::is_record($this.owner, 'account') THEN RETURN true END;
		IF type::is_record($this.owner, 'team') THEN RETURN $value != NONE AND $value = $this.owner.organization END;
		IF type::is_record($this.owner, 'organization') THEN RETURN $value != NONE AND $value = $this.owner END;

		THROW 'CALENDAR_INVALID_OWNER';
	};

---

(source_file
  (expressions
    (expression
      (subquery_statement
        (define_field_statement
          (keyword_define)
          (keyword_field)
          (keyword_overwrite)
          (inclusive_predicate
            (predicate
              (value
                (base_value
                  (identifier)))))
          (on_table_clause
            (keyword_on)
            (identifier))
          (type_clause
            (keyword_type)
            (type
              (parameterized_type
                (type_name)
                (type
                  (parameterized_type
                    (type_name)
                    (type
                      (type_name)))))))
          (reference_clause
            (keyword_reference)
            (reference_on_delete_clause
              (keyword_on)
              (keyword_delete)
              (keyword_cascade)))
          (default_clause
            (keyword_default)
            (block
              (expressions
                (expression
                  (subquery_statement
                    (if_statement
                      (keyword_if)
                      (value
                        (function_call
                          (builtin_function_name)
                          (argument_list
                            (value
                              (path
                                (base_value
                                  (variable_name))
                                (path_element
                                  (subscript
                                    (identifier)))))
                            (value
                              (base_value
                                (string))))))
                      (keyword_then)
                      (if_then_result
                        (value
                          (base_value
                            (keyword_none))))
                      (keyword_end))))
                (semi_colon)
                (expression
                  (subquery_statement
                    (if_statement
                      (keyword_if)
                      (value
                        (function_call
                          (builtin_function_name)
                          (argument_list
                            (value
                              (path
                                (base_value
                                  (variable_name))
                                (path_element
                                  (subscript
                                    (identifier)))))
                            (value
                              (base_value
                                (string))))))
                      (keyword_then)
                      (if_then_result
                        (value
                          (path
                            (base_value
                              (variable_name))
                            (path_element
                              (subscript
                                (identifier)))
                            (path_element
                              (subscript
                                (identifier))))))
                      (keyword_end))))
                (semi_colon)
                (expression
                  (subquery_statement
                    (if_statement
                      (keyword_if)
                      (value
                        (function_call
                          (builtin_function_name)
                          (argument_list
                            (value
                              (path
                                (base_value
                                  (variable_name))
                                (path_element
                                  (subscript
                                    (identifier)))))
                            (value
                              (base_value
                                (string))))))
                      (keyword_then)
                      (if_then_result
                        (value
                          (path
                            (base_value
                              (variable_name))
                            (path_element
                              (subscript
                                (identifier))))))
                      (keyword_end))))
                (semi_colon)
                (expression
                  (value
                    (base_value
                      (keyword_none)))))))
          (assert_clause
            (keyword_assert)
            (block
              (expressions
                (expression
                  (subquery_statement
                    (if_statement
                      (keyword_if)
                      (value
                        (binary_expression
                          (value
                            (binary_expression
                              (value
                                (base_value
                                  (variable_name)))
                              (operator)
                              (value
                                (base_value
                                  (keyword_none)))))
                          (operator
                            (keyword_and))
                          (value
                            (function_call
                              (builtin_function_name)
                              (argument_list
                                (value
                                  (path
                                    (base_value
                                      (variable_name))
                                    (path_element
                                      (subscript
                                        (identifier)))))
                                (value
                                  (base_value
                                    (string))))))))
                      (keyword_then)
                      (if_then_result
                        (return_clause
                          (keyword_return)
                          (value
                            (base_value
                              (keyword_true)))))
                      (keyword_end))))
                (semi_colon)
                (expression
                  (subquery_statement
                    (if_statement
                      (keyword_if)
                      (value
                        (function_call
                          (builtin_function_name)
                          (argument_list
                            (value
                              (path
                                (base_value
                                  (variable_name))
                                (path_element
                                  (subscript
                                    (identifier)))))
                            (value
                              (base_value
                                (string))))))
                      (keyword_then)
                      (if_then_result
                        (return_clause
                          (keyword_return)
                          (value
                            (binary_expression
                              (value
                                (binary_expression
                                  (value
                                    (binary_expression
                                      (value
                                        (base_value
                                          (variable_name)))
                                      (operator
                                        (binary_operator))
                                      (value
                                        (base_value
                                          (keyword_none)))))
                                  (operator
                                    (keyword_and))
                                  (value
                                    (base_value
                                      (variable_name)))))
                              (operator)
                              (value
                                (path
                                  (base_value
                                    (variable_name))
                                  (path_element
                                    (subscript
                                      (identifier)))
                                  (path_element
                                    (subscript
                                      (identifier)))))))))
                      (keyword_end))))
                (semi_colon)
                (expression
                  (subquery_statement
                    (if_statement
                      (keyword_if)
                      (value
                        (function_call
                          (builtin_function_name)
                          (argument_list
                            (value
                              (path
                                (base_value
                                  (variable_name))
                                (path_element
                                  (subscript
                                    (identifier)))))
                            (value
                              (base_value
                                (string))))))
                      (keyword_then)
                      (if_then_result
                        (return_clause
                          (keyword_return)
                          (value
                            (binary_expression
                              (value
                                (binary_expression
                                  (value
                                    (binary_expression
                                      (value
                                        (base_value
                                          (variable_name)))
                                      (operator
                                        (binary_operator))
                                      (value
                                        (base_value
                                          (keyword_none)))))
                                  (operator
                                    (keyword_and))
                                  (value
                                    (base_value
                                      (variable_name)))))
                              (operator)
                              (value
                                (path
                                  (base_value
                                    (variable_name))
                                  (path_element
                                    (subscript
                                      (identifier)))))))))
                      (keyword_end))))
                (semi_colon)
                (expression
                  (primary_statement
                    (throw_statement
                      (keyword_throw)
                      (value
                        (base_value
                          (string))))))
                (semi_colon)))))))
    (semi_colon)))
