test/corpus/v3_features.txt
==================
Scripting Function Simple
==================

CREATE person SET scores = function() {
  return [1,2,3].map(v => v * 10);
};

---

(source_file
  (expressions
    (expression
      (subquery_statement
        (create_statement
          (keyword_create)
          (create_target
            (value
              (base_value
                (identifier))))
          (set_clause
            (keyword_set)
            (field_assignment
              (identifier)
              (assignment_operator)
              (value
                (base_value
                  (scripting_function
                    (keyword_function)
                    (js_function_body)))))))))
    (semi_colon)))

==================
Scripting Function With Args
==================

LET $result = function(a, b) {
  return a + b;
};

---

(source_file
  (expressions
    (expression
      (subquery_statement
        (let_statement
          (keyword_let)
          (variable_name)
          (value
            (base_value
              (scripting_function
                (keyword_function)
                (identifier)
                (identifier)
                (js_function_body)))))))
    (semi_colon)))

==================
Scripting Function Async
==================

CREATE task SET result = async function() {
  let res = await fetch('https://example.com');
  return res.json();
};

---

(source_file
  (expressions
    (expression
      (subquery_statement
        (create_statement
          (keyword_create)
          (create_target
            (value
              (base_value
                (identifier))))
          (set_clause
            (keyword_set)
            (field_assignment
              (identifier)
              (assignment_operator)
              (value
                (base_value
                  (scripting_function
                    (keyword_async)
                    (keyword_function)
                    (js_function_body)))))))))
    (semi_colon)))

==================
Scripting Function Nested Braces
==================

LET $x = function() {
  const obj = { a: 1, b: { c: 2 } };
  return obj;
};

---

(source_file
  (expressions
    (expression
      (subquery_statement
        (let_statement
          (keyword_let)
          (variable_name)
          (value
            (base_value
              (scripting_function
                (keyword_function)
                (js_function_body)))))))
    (semi_colon)))

==================
Scripting Function With String Containing Brace
==================

LET $x = function() {
  return "}";
};

---

(source_file
  (expressions
    (expression
      (subquery_statement
        (let_statement
          (keyword_let)
          (variable_name)
          (value
            (base_value
              (scripting_function
                (keyword_function)
                (js_function_body)))))))
    (semi_colon)))

==================
Scripting Function Template Literal
==================

LET $x = function() {
  const name = "world";
  return `Hello ${name}!`;
};

---

(source_file
  (expressions
    (expression
      (subquery_statement
        (let_statement
          (keyword_let)
          (variable_name)
          (value
            (base_value
              (scripting_function
                (keyword_function)
                (js_function_body)))))))
    (semi_colon)))

==================
Define Sequence Minimal
==================

DEFINE SEQUENCE mySeq;

---

(source_file
  (expressions
    (expression
      (subquery_statement
        (define_sequence_statement
          (keyword_define)
          (keyword_sequence)
          (identifier))))
    (semi_colon)))

==================
Define Sequence Full
==================

DEFINE SEQUENCE mySeq BATCH 1000 START 100 TIMEOUT 5s;

---

(source_file
  (expressions
    (expression
      (subquery_statement
        (define_sequence_statement
          (keyword_define)
          (keyword_sequence)
          (identifier)
          (keyword_batch)
          (int)
          (keyword_start)
          (int)
          (timeout_clause
            (keyword_timeout)
            (duration
              (duration_part))))))
    (semi_colon)))

==================
Define Sequence If Not Exists
==================

DEFINE SEQUENCE IF NOT EXISTS counter START 1;

---

(source_file
  (expressions
    (expression
      (subquery_statement
        (define_sequence_statement
          (keyword_define)
          (keyword_sequence)
          (if_not_exists_clause
            (keyword_if)
            (keyword_not)
            (keyword_exists))
          (identifier)
          (keyword_start)
          (int))))
    (semi_colon)))

==================
Define Sequence Overwrite
==================

DEFINE SEQUENCE OVERWRITE counter BATCH 500;

---

(source_file
  (expressions
    (expression
      (subquery_statement
        (define_sequence_statement
          (keyword_define)
          (keyword_sequence)
          (keyword_overwrite)
          (identifier)
          (keyword_batch)
          (int))))
    (semi_colon)))

==================
Remove Sequence
==================

REMOVE SEQUENCE mySeq;

---

(source_file
  (expressions
    (expression
      (subquery_statement
        (remove_statement
          (keyword_remove)
          (keyword_sequence)
          (identifier))))
    (semi_colon)))

==================
Remove Sequence If Exists
==================

REMOVE SEQUENCE IF EXISTS mySeq;

---

(source_file
  (expressions
    (expression
      (subquery_statement
        (remove_statement
          (keyword_remove)
          (keyword_sequence)
          (if_exists_clause
            (keyword_if)
            (keyword_exists))
          (identifier))))
    (semi_colon)))

==================
Access Grant For User
==================

ACCESS my_access GRANT FOR USER john;

---

(source_file
  (expressions
    (expression
      (subquery_statement
        (access_statement
          (keyword_access)
          (identifier)
          (keyword_grant)
          (keyword_for)
          (keyword_user)
          (identifier))))
    (semi_colon)))

==================
Access Grant For Record
==================

ACCESS my_access ON DATABASE GRANT FOR RECORD user:john;

---

(source_file
  (expressions
    (expression
      (subquery_statement
        (access_statement
          (keyword_access)
          (identifier)
          (keyword_on)
          (keyword_database)
          (keyword_grant)
          (keyword_for)
          (keyword_record)
          (value
            (base_value
              (record_id
                (object_key)
                (record_id_value
                  (record_id_ident))))))))
    (semi_colon)))

==================
Access Show All
==================

ACCESS my_access SHOW ALL;

---

(source_file
  (expressions
    (expression
      (subquery_statement
        (access_statement
          (keyword_access)
          (identifier)
          (keyword_show)
          (keyword_all))))
    (semi_colon)))

==================
Access Show Where
==================

ACCESS my_access SHOW WHERE active = true;

---

(source_file
  (expressions
    (expression
      (subquery_statement
        (access_statement
          (keyword_access)
          (identifier)
          (keyword_show)
          (where_clause
            (keyword_where)
            (value
              (binary_expression
                (value
                  (base_value
                    (identifier)))
                (operator)
                (value
                  (base_value
                    (keyword_true)))))))))
    (semi_colon)))

==================
Access Revoke Grant
==================

ACCESS my_access REVOKE GRANT 'grant-id-123';

---

(source_file
  (expressions
    (expression
      (subquery_statement
        (access_statement
          (keyword_access)
          (identifier)
          (keyword_revoke)
          (keyword_grant)
          (value
            (base_value
              (string))))))
    (semi_colon)))

==================
Access Revoke All
==================

ACCESS my_access ON ROOT REVOKE ALL;

---

(source_file
  (expressions
    (expression
      (subquery_statement
        (access_statement
          (keyword_access)
          (identifier)
          (keyword_on)
          (keyword_root)
          (keyword_revoke)
          (keyword_all))))
    (semi_colon)))

==================
Access Purge Expired
==================

ACCESS my_access PURGE EXPIRED;

---

(source_file
  (expressions
    (expression
      (subquery_statement
        (access_statement
          (keyword_access)
          (identifier)
          (keyword_purge)
          (keyword_expired))))
    (semi_colon)))

==================
Access Purge Revoked With Duration
==================

ACCESS my_access PURGE REVOKED FOR 30d;

---

(source_file
  (expressions
    (expression
      (subquery_statement
        (access_statement
          (keyword_access)
          (identifier)
          (keyword_purge)
          (keyword_revoked)
          (keyword_for)
          (duration
            (duration_part)))))
    (semi_colon)))

==================
Access Purge Both Statuses
==================

ACCESS my_access PURGE EXPIRED, REVOKED;

---

(source_file
  (expressions
    (expression
      (subquery_statement
        (access_statement
          (keyword_access)
          (identifier)
          (keyword_purge)
          (keyword_expired)
          (keyword_revoked))))
    (semi_colon)))

==================
Sequence Builtin Function
==================

RETURN sequence::nextval('mySeq');

---

(source_file
  (expressions
    (expression
      (subquery_statement
        (return_statement
          (return_clause
            (keyword_return)
            (value
              (function_call
                (builtin_function_name)
                (argument_list
                  (value
                    (base_value
                      (string))))))))))
    (semi_colon)))

==================
Set Builtin Function
==================

RETURN set::union([1,2], [2,3]);

---

(source_file
  (expressions
    (expression
      (subquery_statement
        (return_statement
          (return_clause
            (keyword_return)
            (value
              (function_call
                (builtin_function_name)
                (argument_list
                  (value
                    (base_value
                      (array
                        (value
                          (base_value
                            (number
                              (int))))
                        (value
                          (base_value
                            (number
                              (int)))))))
                  (value
                    (base_value
                      (array
                        (value
                          (base_value
                            (number
                              (int))))
                        (value
                          (base_value
                            (number
                              (int))))))))))))))
    (semi_colon)))

==================
Value Builtin Function
==================

RETURN value::diff({a: 1}, {a: 2});

---

(source_file
  (expressions
    (expression
      (subquery_statement
        (return_statement
          (return_clause
            (keyword_return)
            (value
              (function_call
                (builtin_function_name)
                (argument_list
                  (value
                    (base_value
                      (object
                        (object_content
                          (object_property
                            (object_key)
                            (value
                              (base_value
                                (number
                                  (int)))))))))
                  (value
                    (base_value
                      (object
                        (object_content
                          (object_property
                            (object_key)
                            (value
                              (base_value
                                (number
                                  (int))))))))))))))))
    (semi_colon)))
